2001-09-16 Sunday 21:59  poonlap

	* man/: template.3 (1.1), man3/thctype.3 (1.1), man3/wtt.3 (1.1):
	Create first man pages for thctype.3, wtt.3 Also template.3

2001-09-14 Friday 21:36  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.48), configure.in (1.16), include/thai/thwctype.h
	(1.3), src/Makefile.am (1.11), src/thwctype/.cvsignore (1.1),
	src/thwctype/Makefile.am (1.1), ChangeLog (1.49),
	src/thwctype/thwctype.c (1.1): Add a quick implementation of
	thwctype.

2001-09-14 Friday 21:07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/: test_thbrk.c (1.5), test_thcell.c (1.5): Fix warning.

2001-09-14 Friday 21:05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.47), src/thwchar/Makefile.am (1.3),
	src/thwchar/hashtbl.c (1.2), src/thwchar/hashtbl.h (1.2),
	src/thwchar/thwchar.c (1.7): Remove hashing. Use simple linear
	search, to get rid of memory leak.

2001-09-14 Friday 20:48  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.46), include/thai/thwchar.h (1.8),
	src/thwchar/thwchar.c (1.6): Use lazy creation for hash tables.

2001-09-14 Friday 00:54  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.45), include/thai/thwchar.h (1.7),
	src/thwchar/Makefile.am (1.2), src/thwchar/hashtbl.c (1.1),
	src/thwchar/hashtbl.h (1.1), src/thwchar/thwchar.c (1.5): Implement
	uni2winthai(), uni2macthai() with hash table added in hashtbl.[ch].

2001-08-22 Wednesday 11:41  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.44), include/thai/wtt.h (1.2), src/thcell/thcell.c
	(1.6), src/thctype/wtt.c (1.2), src/thinp/thinp.c (1.8),
	src/thrend/thrend.c (1.10), src/thstr/thstr.c (1.3),
	src/thwchar/thwchar.c (1.4): Add comments. Check naming convention.
	Refine coding style.

2001-08-14 Tuesday 13:18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.43), NEWS (1.5) (utags: r0_1_1): Release Version
	0.1.1.
