@@ -1,5 +1,5 @@
-# $Id: Makefile.am,v 1.3 2001-07-24 14:23:59 thep Exp $
-SUBDIRS = include src tests
+# $Id: Makefile.am,v 1.4 2001-09-25 12:26:48 thep Exp $
+SUBDIRS = include src tests man
 
 MAINTAINERCLEANFILES = Makefile.in
 
