@@ -1,3 +1,13 @@
+2001-09-22 Saturday 15:19  poonlap
+
+	* src/Makefile.am (1.12): Thwbrk is not listed in the
+	library(typo-error), fixed.
+
+2001-09-17 Monday 08:53  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* AUTHORS (1.4), ChangeLog (1.50), include/thai/thwinp.h (1.4): Add
+	K.Poonlap to AUTHORS. Rename thwciscompose() to thwcisaccept().
+
 2001-09-16 Sunday 21:59  poonlap
 
 	* man/: template.3 (1.1), man3/thctype.3 (1.1), man3/wtt.3 (1.1):
@@ -590,13 +600,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.50 2001-09-17 01:53:01 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.51 2001-09-25 12:26:48 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.50 2001-09-17 01:53:01 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.51 2001-09-25 12:26:48 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
